--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ set -g set-titles on
 set-option -g  allow-rename off
 set-window-option -g automatic-rename off
 
-set-option -g default-command "/bin/bash"
+# set-option -g default-command "/bin/bash"
 
 
 # Reload TMUX config:
